// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when shared integer property has identifier of shared short should have validation failure for property 1`] = `"Shared integer property 'SharedName' does not match any declared Shared Integer in namespace EdFi."`;

exports[`when shared integer property has identifier of shared short should have validation failure for property 2`] = `
Object {
  "column": 36,
  "line": 5,
  "tokenText": "SharedName",
}
`;

exports[`when shared integer property has invalid identifier of shared integer in dependency namespace should have validation failure for property 1`] = `"Shared integer property 'SharedName' does not match any declared Shared Integer in namespace EdFi."`;

exports[`when shared integer property has invalid identifier of shared integer in dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 38,
  "line": 10,
  "tokenText": "SharedName",
}
`;

exports[`when shared integer property has invalid identifier should have validation failure for property 1`] = `"Shared integer property 'InvalidName' does not match any declared Shared Integer in namespace EdFi."`;

exports[`when shared integer property has invalid identifier should have validation failure for property 2`] = `
Object {
  "column": 37,
  "line": 5,
  "tokenText": "InvalidName",
}
`;

exports[`when shared integer property refers to shared integer in non-dependency namespace should have validation failure for property 1`] = `"Shared integer property 'SharedName' does not match any declared Shared Integer in namespace Extensiona."`;

exports[`when shared integer property refers to shared integer in non-dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 47,
  "line": 10,
  "tokenText": "SharedName",
}
`;
